// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCheckableCard is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard testClass1 testClass2 emotion-euiPanel-m-plain-hasBorder-euiCheckableCard-euiTestCss"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued-isClickable"
  >
    <div
      aria-label="aria-label"
      class="euiRadio euiRadio--noLabel"
      data-test-subj="test subject string"
    >
      <input
        class="euiRadio__input"
        id="id"
        type="radio"
        value=""
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent"
  >
    <label
      class="euiCheckableCard__label emotion-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders a checkbox when specified 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard testClass1 testClass2 emotion-euiPanel-m-plain-hasBorder-euiCheckableCard-euiTestCss"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued-isClickable"
  >
    <div
      class="euiCheckbox euiCheckbox--noLabel emotion-euiCheckbox"
    >
      <input
        aria-label="aria-label"
        class="euiCheckbox__input"
        data-test-subj="test subject string"
        id="id"
        type="checkbox"
      />
      <div
        class="euiCheckbox__square"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent"
  >
    <label
      class="euiCheckableCard__label emotion-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders children 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard emotion-euiPanel-m-plain-hasBorder-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued-isClickable"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        id="id"
        type="radio"
        value=""
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent"
  >
    <label
      aria-describedby="id-details"
      class="euiCheckableCard__label emotion-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
    <div
      class="euiCheckableCard__children emotion-euiCheckableCard__children"
      id="id-details"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCheckableCard renders disabled 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard emotion-euiPanel-m-plain-hasBorder-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        disabled=""
        id="id"
        type="radio"
        value=""
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent"
  >
    <label
      class="euiCheckableCard__label emotion-euiCheckableCard__label-isDisabled"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders panel props 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row euiCheckableCard emotion-euiPanel-m-plain-hasShadow-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued-isClickable"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        id="id"
        type="radio"
        value=""
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent"
  >
    <label
      class="euiCheckableCard__label emotion-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;
